Fixed layout issues.

--- a/css/theme/source/docker.scss
+++ b/css/theme/source/docker.scss
@@ -44,3 +44,7 @@ $heading4Size: 0.70em;
 	vertical-align: text-top;
 	color: #BDDFFA
 }
+
+.reveal p.r-small-text {
+	font-size: 0.5em !important;
+}
